--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "prepublishOnly": "npm run build",
-    "test": "jest"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
   },
   "keywords": [
     "audio",
-    "analysis", 
+    "analysis",
     "bpm",
     "loops",
     "music",
@@ -39,7 +39,8 @@
     "rollup": "^4.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "web-audio-test-api": "file:./web-audio-test-api"
   },
   "files": [
     "dist/",
