--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev": "rollup -c -w",
     "prepublishOnly": "npm run build",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-
   },
   "keywords": [
     "audio",
@@ -38,10 +37,13 @@
   },
   "private": false,
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "rollup": "^4.0.0",
+    "ts-jest": "^29.3.4",
     "web-audio-test-api": "file:./web-audio-test-api"
   },
   "files": [
