--- a/deploying/railway-api/package.json
+++ b/deploying/railway-api/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "stripe": "^12.14.0",
     "jsonwebtoken": "^9.0.2"
-
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
