--- a/examples/astro-doppler/package.json
+++ b/examples/astro-doppler/package.json
@@ -8,6 +8,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.0.0"
+    "astro": "^4.0.0",
+    "pleco-xa": "^1.0.1"
   }
 }
