docs: document node 20 usage

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "LICENSE"
   ],
   "engines": {
-    "node": ">=14.0.0"
+    "node": "20.x"
   },
   "dependencies": {
     "terser": "^5.39.2"
