--- a/deploying/railway-api/package.json
+++ b/deploying/railway-api/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "dependencies": {
     "stripe": "^12.14.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node server.js"
