--- a/examples/astro-site/package.json
+++ b/examples/astro-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pleco-astro-site",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
