--- a/deploying/railway-api/package.json
+++ b/deploying/railway-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pleco-xa-railway-api",
-  "private": true,
+  "private": false,
   "type": "module",
   "dependencies": {
     "stripe": "^12.14.0",
