Format codebase using Prettier

--- a/deploying/railway-api/package.json
+++ b/deploying/railway-api/package.json
@@ -8,9 +8,13 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "format": "prettier --write ."
   },
   "engines": {
     "node": "20.x"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0"
   }
 }
