--- a/deploying/railway-api/.prettierrc
+++ b/deploying/railway-api/.prettierrc
@@ -1,7 +1,15 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "printWidth": 100,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "semi": false,
+  "singleQuote": true,
+  "htmlWhitespaceSensitivity": "ignore",
+  "plugins": ["prettier-plugin-astro"],
+  "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    }
+  ]
 }
