--- a/deploying/railway-api/package.json
+++ b/deploying/railway-api/package.json
@@ -3,9 +3,10 @@
   "private": false,
   "type": "module",
   "dependencies": {
-    "stripe": "^12.14.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "express": "^4.18.2"
+    "pleco-xa": "^1.0.1",
+    "stripe": "^12.14.0"
   },
   "scripts": {
     "start": "node server.js",
