feat: Add Astro-based demo structure with working BPM detection
- Add Astro configuration and dependencies for demo serving
- Create /public/frontend/bmp-detection.html with librosa-style BPM detection
- Add main demo index at /src/pages/index.astro showing 19 planned demos
- Implement Web Audio API approach for .aif file support
- Add proper confidence calculation (1 - correlation) for meaningful results
- Structure follows BeaatsLoops pattern for consistency
- Audio looping and GSAP animations for professional UX
- Ready for remaining 18 demo implementations

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "astro": "./astro/index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "http-server -c-1 -p 3000 --cors",
+    "build": "rollup -c && astro build",
+    "dev": "astro dev --port 3000",
+    "preview": "astro preview",
     "prepublishOnly": "npm run build",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests src/__tests__"
   },
@@ -38,6 +39,7 @@
   "private": false,
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
+    "astro": "^5.7.13",
     "http-server": "^14.1.1",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "babel-jest": "^29.7.0",
