--- a/package.json
+++ b/package.json
@@ -1,64 +1,38 @@
 {
   "name": "pleco-xa",
-  "version": "1.0.2",
-  "description": "Browser-native audio analysis engine for musical timing, BPM detection, and intelligent loop finding",
-  "main": "dist/pleco-xa.js",
-  "module": "dist/pleco-xa.js",
-  "unpkg": "dist/pleco-xa.min.js",
-  "astro": "./astro/index.js",
   "type": "module",
+  "version": "1.0.2",
+  "engines": {
+    "node": ">=18.20.8"
+  },
   "scripts": {
-    "build": "rollup -c && astro build",
-    "dev": "astro dev --port 3000",
+    "dev": "astro dev",
+    "start": "serve dist -l ${PORT:-3000}",
+    "build": "astro build",
     "preview": "astro preview",
-    "prepublishOnly": "npm run build",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests src/__tests__"
+    "astro": "astro",
+    "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "audio",
-    "analysis",
-    "bpm",
-    "loops",
-    "music",
-    "web-audio",
-    "browser",
-    "librosa",
-    "spectral-analysis",
-    "musical-timing"
-  ],
-  "author": "Cameron Brooks",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brookcs3/pleco-xa.git"
+  "dependencies": {
+    "astro": "^5.7.13",
+    "autoprefixer": "^10.4.21",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.3",
+    "modern-normalize": "^3.0.1",
+    "sass": "^1.89.0",
+    "serve": "^14.2.4"
   },
-  "homepage": "https://github.com/brookcs3/pleco-xa#readme",
-  "bugs": {
-    "url": "https://github.com/brookcs3/pleco-xa/issues"
-  },
-  "private": false,
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
-    "astro": "^5.7.13",
-    "http-server": "^14.1.1",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "babel-jest": "^29.7.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
     "rollup": "^4.0.0",
     "ts-jest": "^29.3.4",
     "web-audio-test-api": "file:./web-audio-test-api"
-  },
-  "files": [
-    "dist/",
-    "src/",
-    "astro/",
-    "README.md",
-    "LICENSE"
-  ],
-  "engines": {
-    "node": ">=20"
-  },
-  "dependencies": {
-    "terser": "^5.39.2"
   }
 }
