--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ lerna-debug.log*
 
 # Build outputs
 dist/
-build/
+.astro/
+
 *.tsbuildinfo
 
 # Environment
@@ -59,7 +60,7 @@ examples/*.aiff
 examples/*.aif
 
 # Optional npm cache
-.npm
+
 
 # Optional eslint cache
 .eslintcache
