--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "serve dist -l ${PORT:-3000}",
-    "build": "astro build",
+    "start": "serve -l 0.0.0.0:${PORT:-3000} dist",
+    "build": "ROLLUP_NO_BINARY=true astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "bundle": "rollup -c"
   },
   "dependencies": {
     "astro": "^5.7.13",
@@ -20,8 +21,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
     "modern-normalize": "^3.0.1",
-    "sass": "^1.89.0",
-    "serve": "^14.2.4"
+    "sass": "^1.89.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
@@ -31,8 +31,10 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "rollup": "^4.0.0",
+    "rollup": "^4.41.1",
+    "serve": "^14.2.4",
     "ts-jest": "^29.3.4",
     "web-audio-test-api": "file:./web-audio-test-api"
-  }
+  },
+  "prepublishOnly": "npm run bundle"
 }
