--- a/railway.toml
+++ b/railway.toml
@@ -16,7 +16,7 @@ runtime = "V2"
 numReplicas = 1
 startCommand = "npm start"
 sleepApplication = false
-healthcheckPath = "/"
+healthcheckPath = "/health"
 healthcheckTimeout = 10
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
