--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "astro",
     "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
     "prepublishOnly": "npm run build",
+    "test": "jest",
     "bundle": "rollup -c"
   },
   "dependencies": {
@@ -23,12 +24,21 @@
     "modern-normalize": "^3.0.1",
     "sass": "^1.89.0"
   },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom"
+    ]
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-node-resolve": "^15.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "babel-jest": "^29.7.0",
+    "canvas": "^3.1.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "rollup": "^4.41.1",
