--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "pleco-xa",
+  "name": "@brookcs3/pleco-xa",
+  "version": "1.0.5",
   "type": "module",
-  "version": "1.0.4",
+  "publishConfig": {
+   "registry": "https://npm.pkg.github.com/"
+},
   "engines": {
     "node": ">=18.20.8"
   },
