--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run bundle",
     "test": "jest",
     "bundle": "rollup -c"
   },
   "dependencies": {
-    "astro": "^5.7.13",
+    "astro": "^5.8.1",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
@@ -43,6 +43,5 @@
     "terser": "^5.39.2",
     "ts-jest": "^29.3.4",
     "web-audio-test-api": "file:web-audio-test-api"
-  },
-  "prepublishOnly": "npm run bundle"
+  }
 }
