--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.89.0"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -36,12 +37,13 @@
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1",
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1",
     "rollup": "^4.41.1",
     "serve": "^14.2.4",
     "terser": "^5.39.2",
     "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3",
     "web-audio-test-api": "file:web-audio-test-api"
   }
 }
