--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     "**/*.ts",
     "**/*.js"
 , "astro.config.mjs"  ],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
