refactor: simplify WaveformEditor component and update loop point handling

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,14 +2,5 @@
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "htmlWhitespaceSensitivity": "ignore",
-  "plugins": ["prettier-plugin-astro"],
-  "overrides": [
-    {
-      "files": "*.astro",
-      "options": {
-        "parser": "astro"
-      }
-    }
-  ]
+  "htmlWhitespaceSensitivity": "ignore"
 }
