Refactor and update audio utility functions, tests, and configurations
- Refactored `xa-recurrence.js` to improve logging and code readability.
- Updated import paths in various test files to reflect new structure.
- Enhanced test cases for audio utilities to ensure accuracy.
- Added a placeholder test for compression utilities.
- Implemented a new test suite for Hello World functionality.
- Configured Vitest for testing framework integration.
- Adjusted `tsconfig.json` for better module resolution.
- Cleaned up `web-audio-test-api` to streamline audio context and buffer handling.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "src",
     "**/*.astro",
     "**/*.ts",
-    "**/*.js"
-, "astro.config.mjs"  ],
+    "**/*.js",
+    "astro.config.mjs"
+  ],
   "exclude": ["dist", "node_modules"],
   "compilerOptions": {
     "baseUrl": ".",
