--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "bundle": "rollup -c"
   },
   "dependencies": {
-    "astro": "^5.8.1",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
@@ -32,6 +31,7 @@
     "@babel/preset-env": "^7.27.2",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "astro": "^5.8.1",
     "babel-jest": "^29.7.0",
     "canvas": "^3.1.0",
     "http-server": "^14.1.1",
@@ -44,6 +44,7 @@
     "terser": "^5.39.2",
     "ts-jest": "^29.3.4",
     "typescript": "^5.8.3",
+    "vitest": "^3.1.4",
     "web-audio-test-api": "file:web-audio-test-api"
   }
 }
