--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "start": "serve -l tcp://0.0.0.0:${PORT} dist",
+    "start": "node server/entry.mjs",
     "build": "ROLLUP_NO_BINARY=true astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
     "prepublishOnly": "npm run bundle",
     "test": "jest",
-    "bundle": "rollup -c"
+    "bundle": "rollup -c",
+    "check": "astro check"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
@@ -29,11 +30,17 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@babel/preset-env": "^7.27.2",
+    "@eslint/js": "^9.28.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/node": "^22.15.29",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "astro": "^5.8.1",
     "babel-jest": "^29.7.0",
     "canvas": "^3.1.0",
+    "eslint": "^9.28.0",
+    "eslint-plugin-astro": "^1.3.1",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
