--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "check": "astro check"
   },
   "dependencies": {
+    "@inox-tools/astro-tests": "^0.6.1",
+    "astro-auto-import": "^0.4.4",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
