--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brookcs3/pleco-xa",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
@@ -55,5 +55,9 @@
     "typescript": "^5.8.3",
     "vitest": "^3.1.4",
     "web-audio-test-api": "file:web-audio-test-api"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brookcs3/pleco-xa.git"
   }
 }
