--- a/package.json
+++ b/package.json
@@ -2,76 +2,24 @@
   "name": "pleco-xa",
   "version": "1.0.6",
   "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
-  "description": "Loop-aware audio analysis tools and utilities for Astro + WebAudio projects.",
-  "keywords": [
-    "audio",
-    "web-audio",
-    "astro",
-    "pleco",
-    "bpm",
-    "visualization"
-  ],
-  "license": "MIT",
-  "author": "Cameron Brooks <ca.br@me.com>",
-  "main": "dist/pleco-xa.js",
-  "exports": {
-    ".": "./dist/pleco-xa.js"
-  },
-  "engines": {
-    "node": ">=18.20.8"
-  },
   "scripts": {
     "dev": "astro dev",
-    "start": "astro preview",
-    "build": "ROLLUP_NO_BINARY=true astro build",
-    "astro": "astro",
-    "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
-    "prepublishOnly": "npm run bundle",
-    "test": "jest",
-    "bundle": "rollup -c",
-    "check": "astro check"
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@inox-tools/astro-tests": "^0.6.1",
-    "astro-auto-import": "^0.4.4",
+    "astro": "5.8.1",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
     "modern-normalize": "^3.0.1",
     "sass": "^1.89.0"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@babel/preset-env": "^7.27.2",
-    "@eslint/js": "^9.28.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@types/node": "^22.15.29",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "astro": "^5.8.1",
-    "babel-jest": "^29.7.0",
-    "canvas": "^3.1.0",
-    "eslint": "^9.28.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "http-server": "^14.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-astro": "0.14.1",
-    "rollup": "^4.41.1",
-    "serve": "^14.2.4",
-    "terser": "^5.39.2",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.4",
-    "web-audio-test-api": "file:web-audio-test-api"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brookcs3/pleco-xa.git"
   }
 }
+
+
+
+  
+
