--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,3 @@
 {
-  "extends": "astro/tsconfigs/base",
-  "include": [
-    ".astro/types.d.ts",
-    "src",
-    "**/*.astro",
-    "**/*.ts",
-    "**/*.js",
-    "astro.config.mjs"
-  ],
-  "exclude": ["dist", "node_modules"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  }
+  "extends": "astro/tsconfigs/base"
 }
