--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "lenis": "^1.3.3",
     "modern-normalize": "^3.0.1",
     "sass": "^1.89.0"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "license": "MIT"
 }
