--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Browser-native audio analysis library for intelligent loop detection and BPM tracking",
   "scripts": {
     "dev": "astro dev",
-    "start": "npm build" ,
-    "build": "npm install && astro build"
+    "start": "astro preview",
+    "build": "astro build"
     },
   "dependencies": {
     "astro": "5.8.1",
