--- a/railway.toml
+++ b/railway.toml
@@ -20,3 +20,5 @@ healthcheckPath = "/health"
 healthcheckTimeout = 10
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+echo '{"status":"ok"}' > public/health
