refactor: Update start command in railway.toml to use npm start

--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ buildCommand = "npm install && npm run build"
 [deploy]
 runtime = "V2"
 numReplicas = 1
-startCommand = "astro preview"
+startCommand = "npm start"
 sleepApplication = false
 healthcheckPath = "/health"
 healthcheckTimeout = 10
