--- a/package.json
+++ b/package.json
@@ -1,21 +1,47 @@
 {
-  "name": "pleco-xa",
-  "version": "1.0.6",
+  "name": "@brookcs3/pleco-xa",
+  "version": "1.0.4",
   "type": "module",
-  "description": "Browser-native audio analysis library for intelligent loop detection and BPM tracking",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "engines": {
+    "node": ">=18.20.8"
+  },
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "start": "serve -l tcp://0.0.0.0:${PORT} dist",
+    "build": "ROLLUP_NO_BINARY=true astro build",
     "preview": "astro preview",
-    "start": "astro start"
-    },
+    "astro": "astro",
+    "format": "prettier --write \"src/**/*.{js,astro,ts,jsx,tsx}\"",
+    "prepublishOnly": "npm run bundle",
+    "test": "jest",
+    "bundle": "rollup -c"
+  },
   "dependencies": {
-    "astro": "5.8.1",
+    "astro": "^5.8.1",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "lenis": "^1.3.3",
     "modern-normalize": "^3.0.1",
     "sass": "^1.89.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "babel-jest": "^29.7.0",
+    "canvas": "^3.1.0",
+    "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "rollup": "^4.41.1",
+    "serve": "^14.2.4",
+    "terser": "^5.39.2",
+    "ts-jest": "^29.3.4",
+    "web-audio-test-api": "file:web-audio-test-api"
   }
-  
 }
