--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "astro/tsconfigs/base"
+  "extends": "astro/tsconfigs/base",
+  "include": [
+    ".astro/types.d.ts",
+    "src",
+    "**/*.astro",
+    "**/*.ts",
+    "**/*.js"
+, "astro.config.mjs"  ],
+  "exclude": ["dist", "node_modules"]
 }
