--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "start": "astro preview --port $PORT --host"
-    },
+  },
   "dependencies": {
     "astro": "5.8.1",
     "autoprefixer": "^10.4.21",
@@ -16,6 +16,8 @@
     "lenis": "^1.3.3",
     "modern-normalize": "^3.0.1",
     "sass": "^1.89.0"
+  },
+  "devDependencies": {
+    "vitest": "^3.1.4"
   }
-  
 }
