--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ buildCommand = "npm install && npm run build"
 [deploy]
 runtime = "V2"
 numReplicas = 1
-startCommand = "npm start"
+startCommand = "node ./dist/server/entry.mjs"
 sleepApplication = false
 healthcheckPath = "/health"
 healthcheckTimeout = 10
