--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,14 @@
-name: Node.js CI
+name: CI and Deploy
 
 on:
   push:
     branches: [main]
   pull_request:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build:
@@ -14,4 +19,20 @@ jobs:
         with:
           node-version: 18.20.8
       - run: npm ci
+      - run: npm test
       - run: npm run build
+      - uses: actions/upload-pages-artifact@v2
+        with:
+          path: dist
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - id: deployment
+        uses: actions/deploy-pages@v2
