--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "src",
     "**/*.astro",
     "**/*.ts",
-    "**/*.js"
-, "astro.config.mjs"  ],
+    "**/*.js",
+    "astro.config.mjs"
+  ],
   "exclude": ["dist", "node_modules"]
 }
