--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "start": "astro preview --port $PORT --host",
-    "test": "vitest"
+    "test": "vitest",
+    "setup": "npm install"
   },
   "dependencies": {
     "@astrojs/node": "^9.2.2",
