--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sass": "^1.89.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "rollup-plugin-esbuild": "^6.2.1",
     "vitest": "^3.1.4"
   }
 }
