--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^16.0.1",
     "rollup-plugin-esbuild": "^6.2.1",
-    "vitest": "^3.1.4"
+    "vitest": "^3.1.4",
+    "jsdom": "^24.0.0"
   }
 }
